docs/v0.4.2/_sources/gallery/tutorials/index.rst.txt
:orphan:

Examples: Tutorials
===================


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to simulate a flow cytometry experiment using the FlowCyPy library. The simulation involves configuring a flow setup, defining a single population of particles, and analyzing scattering signals from two detectors to produce a 2D density plot of scattering intensities.">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Flow Cytometry Simulation: Scattering Intensities with One Population</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/tutorials/workflow



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
