docs/v0.9.4/_sources/gallery/tutorials/index.rst.txt
:orphan:

Examples: Tutorials
===================


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Limit of detection">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_limit_of_detection_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_limit_of_detection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Limit of detection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to simulate a flow cytometry experiment using the FlowCyPy library. The simulation involves configuring a flow setup, defining a single population of particles, and analyzing scattering signals from two detectors to produce a 2D density plot of scattering intensities.">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_pre_defined_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_pre_defined_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Workflow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to apply signal processing techniques to flow cytometry data using FlowCyPy. The simulation is set up with a Gaussian beam, a flow cell, and two detectors. A single population of scatterers (with delta distributions) is used, and the focus here is on processing the forward scatter detector signals. Three acquisitions are performed:">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_signal_processing_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_signal_processing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Signal Processing in Flow Cytometry</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to simulate a flow cytometry experiment using the FlowCyPy library. The simulation involves configuring a flow setup, defining a single population of particles, and analyzing scattering signals from two detectors to produce a 2D density plot of scattering intensities.">

.. only:: html

  .. image:: /gallery/tutorials/images/thumb/sphx_glr_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_tutorials_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Workflow</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/tutorials/limit_of_detection
   /gallery/tutorials/pre_defined_workflow
   /gallery/tutorials/signal_processing
   /gallery/tutorials/workflow



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
